--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="random_text">Pick For Me (random)</string>
     <string name="viewed_text">Recently Viewed</string>
     <string name="action_text">ACTION!</string>
+    <string name="test_text">work</string>
 </resources>
