--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="add_type">Type</string>
     <string name="add_restaurant">Create Restaurant</string>
     <string name="add_to_database">Add Restaurant</string>
+    <string name="get_text">Get Locations Around Me</string>
 
 </resources>
